--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
   ],
   "dependencies": {
     "lodash": "~3.10.0",
-    "ramda": "~0.16.0"
+    "ramda": "~0.16.0",
+    "react": "~0.13.3",
+    "react-bootstrap": "~0.23.7",
+    "requirejs": "~2.1.19",
+    "requirejs-react-jsx": "~0.14.2"
   }
 }
